# andaman-nicobar-quake-risk-forecast

./: .gitignore  README.md  pyproject.toml
data/models/: model.joblib
data/processed/: calibration_table.csv  events.parquet  ml_table.parquet  test_predictions.csv
data/raw/: andaman_usgs_events.csv
notebooks/: 01_report.ipynb
src/eqf/: build_features.py  config.py  features.py  make_dataset.py  predict.py  train.py
src/eqf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
